[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.25", features = ["json"]}
serde ={ version = "1.0.197", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = { version = "0.3"}